--- a/style.css
+++ b/style.css
@@ -1,1 +1,137 @@
 /*tic tac toe*/
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700,900');
+
+:root{
+    --title: 48px;
+    --subtitle: 30px;
+    --normal: 18px;
+    --first: rgb(209, 209, 209);
+    --second: rgb(156, 156, 156);
+    --third: rgb(75, 75, 75);
+    --black: rgb(26, 24, 24);
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    color: var(--black);
+    transition: all 200ms ease-in;
+    font-family: 'Raleway';
+}
+
+body{
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 1fr 9fr 1fr;
+}
+
+header{
+    padding: 2rem;
+    box-shadow: 0px 9px 14px -1px rgba(0, 0, 0, 0.34);
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    display: grid;
+    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+    gap: 1rem;
+}
+
+.square{
+    background-color: var(--second);
+    min-height: 200px;
+    min-width: 200px;
+    height: 200px;
+    width: 30%;
+}
+
+.menu{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+    background-color: var(--second);
+    border-radius: 20px;
+
+}
+
+.scoreBoard{
+    padding: 1rem;
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+footer{
+    padding: 1rem;
+    text-align: center;
+    color: var(--first);
+    grid-row: 3;
+    background-color: var(--third);
+    font-size: var(--normal);
+    font-weight: bold;
+}
+
+
+h1{
+    font-size: var(--title);
+}
+
+h2{
+    font-size: var(--subtitle);
+}
+
+p, label{
+    font-size: var(--normal);
+}
+
+button{
+    background-color: var(--third);
+    border-style: solid;
+    border-color: var(--first);
+    border-radius: 10px;
+    color: whitesmoke;
+    padding: 0.7rem;
+    margin: 1rem;
+    font-size: 20px;
+    font-weight: bold;
+    position: relative;
+    bottom: 0;
+    width: fit-content;
+}
+button:hover{
+    background-color: var(--first);
+    color: var(--black);
+    border-color: var(--black);
+    bottom: 5px;
+    cursor: pointer;
+}
+
+
+input{
+    padding: 5px;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: transparent;
+    color: var(--black);
+    font-size: var(--normal);
+}
+input:focus{
+    outline: none;
+    
+}
+
+input[type="checkbox"]{
+    accent-color: green;
+    margin: 0.5rem;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+}
